--- a/web_service/templates/includes/footer/footer.j2
+++ b/web_service/templates/includes/footer/footer.j2
@@ -3,8 +3,8 @@
     <div class="footer__container flex">
       <div class="footer__list">
         <p class="footer-title">КБ Маршал</p>
-        <a href="+79994959595" class="footer__link">Телефон: +7 999 495 95 95</a>
-        <a href="mailto:kbmarshal@mail.ru" class="footer__link">E-mail: kbmarshal@mail.ru</a>
+        <a href="phone:+74959999999" class="footer__link">Телефон: +7 495 999 99 99</a>
+        <a href="mailto:kbmarshal@mail.ru" class="footer__link">E-mail: kbmarshal@admin.ru</a>
       </div>
     </div>
   </div>
