--- a/web_service/templates/includes/header/header.j2
+++ b/web_service/templates/includes/header/header.j2
@@ -32,7 +32,11 @@
           </p>
         </div>
         <div>
-        <a href="{{ url('users:register_user') }}" class="header__link header__link-reg">Вход / Регистрация</a>
+        {% if request.user.is_authenticated %}
+          <a href="{{ url('users:logout_user') }}" class="header__link header__link-reg">Выйти</a>
+        {% else %}
+          <a href="{{ url('users:login_user') }}" class="header__link header__link-reg">Вход / Регистрация</a>
+        {% endif %}
         </div>
       </div>
     </div>
