--- a/web_service/templates/base.j2
+++ b/web_service/templates/base.j2
@@ -29,7 +29,7 @@
       </main>
 
       <footer class="Footer">
-          <div class="wrap">
+          <div class="wraps">
               <div class="row Footer-main">
                   {% include "includes/footer/footer.j2" %}
               </div>
