--- a/web_service/templates/users/password.j2
+++ b/web_service/templates/users/password.j2
@@ -4,9 +4,9 @@
 
 
             <div class="wrapper">
-                <div class="header">
+                <div class="password-title">
                     <h3 class="sign-in">Восстановление пароля (2/2)</h3>
-                    <h5>Придумайте новый пароль для учетной записи</h5>
+                    <h5 class="password-subtitle">Придумайте новый пароль для учетной записи</h5>
                 </div>
 
                 <form action="#" method="post">
@@ -19,7 +19,7 @@
                         {{ form.new_password2 }}
                     </div>
                     <div>
-                        <input type="submit" value="Сохранить пароль" />
+                        <input class="btn btn_success" type="submit" value="Сохранить пароль" />
                     </div>
                 </form>
             </div>
