--- a/web_service/templates/account/profile.j2
+++ b/web_service/templates/account/profile.j2
@@ -2,99 +2,84 @@
 
 {% block content %}
 
-    <div class="Middle Middle_top">
-
-        <div class="Section Section_column Section_columnLeft">
-            <div class="wrap">
-                <div class="Section-column">
-                    <div class="Section-columnSection">
-                        <header class="Section-header">
-                            <strong class="Section-title">Навигация
-                            </strong>
-                        </header>
-                        <div class="Section-columnContent">
-                            <div class="NavigateProfile">
-                                <ul class="menu menu_vt">
-                                    <li class="menu-item"><a class="menu-link" href="{{ url('account:account_user', request.user.pk) }}">Личный кабинет</a>
-                                    </li>
-                                    <li class="menu-item_ACTIVE menu-item"><a class="menu-link" href="{{ url('account:profile_user', request.user.pk) }}">Профиль</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+  <div class="section-account">
+      {% include "account/navigation.j2" %}
+      <div class="section-content">
+        <div class="profile">
+          <form class="form profile-form" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="row flex">
+              <div class="row-block">
+                <div class="form-group">
+                  <label class="form-label" for="avatar">Аватар
+                  </label>
+                  <div class="p-avatar profile-avatar_noimg">
+                    {% if user.photo %}
+                        <label class="profile-fileLabel" for="avatar"><img class="avatar-img" src="{{ user.photo.url }}" alt="Аватар" /> Загрузить другой аватар</label>
+                        <input class="form-input" id="avatar" name="avatar" type="file" data-validate="onlyImgAvatar" hidden="hidden"/>
+                    {% else %}
+                      <label class="profile-fileLabel" for="avatar"><img class="avatar-img" src="{{ static('img/download.svg') }}" alt="Аватар" />Загрузить аватар</label>
+                      <input class="form-input" id="avatar" name="avatar" type="file" data-validate="onlyImgAvatar" hidden="hidden"/>
+                    {% endif %}
+                  </div>
                 </div>
-                <div class="Section-content">
-                    <div class="Profile">
-                        <form class="form Profile-form" method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            <div class="row">
-                                <div class="row-block">
-                                    <div class="form-group">
-                                        <label class="form-label" for="avatar">Аватар
-                                        </label>
-                                        <div class="Profile-avatar Profile-avatar_noimg">
-
-                                            <label class="Profile-fileLabel" for="avatar"><img src="{{ static('assets/img/icons/upload.png') }}" alt="#.png" />Загрузить фото
-                                            </label>
-                                            
-                                            <input class="Profile-file form-input" id="avatar" name="avatar" type="file" data-validate="onlyImgAvatar" />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label" for="name">ФИО
-                                        </label>
-                                        {% if user.last_name %}
-                                        <input class="form-input" id="name" name="name" type="text"
-                                        value="{{user.last_name}} {{user.first_name}} {{user.surname}}"" data-validate="require"/>
-                                        {% else %}
-                                        <input class="form-input" id="name" name="name" type="text" data-validate="require"/>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                                <div class="row-block">
-                                    <div class="form-group">
-                                        <label class="form-label" for="phone">Телефон
-                                        </label>
-                                        <input class="form-input" id="phone" name="phone" type="text" value="{{ user.phone_number }}" placeholder="+7(988)000-00-00" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label" for="mail">E-mail
-                                        </label>
-                                        <input class="form-input" id="mail" name="mail" type="text" value="{{ user.email }}" data-validate="require" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label" for="password">Пароль
-                                        </label>
-                                        <input class="form-input" id="password" name="password" type="password" placeholder="Тут можно изменить пароль" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label" for="passwordReply">Подтверждение пароля
-                                        </label>
-                                        <input class="form-input" id="passwordReply" name="passwordReply" type="password" placeholder="Введите пароль повторно" />
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="Profile-btn">
-                                            <button class="btn btn_success" type="submit">Сохранить
-                                            </button>
-                                        </div>
-                                        <div class="Profile-success">
-                                        {% if messages %}
-                                            <ul class="messages">
-                                                {% for message in messages %}
-                                                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                                                {% endfor %}
-                                            </ul>
-                                        {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+              </div>
+              <div class="row-block">
+                <div class="form-group">
+                  <label class="form-label" for="name">ФИО
+                  </label>
+                  {% if user.last_name %}
+                    <input class="form-input" id="name" name="name" type="text" value="{{user.last_name}} {{user.first_name}} {{user.surname}}" data-validate="require"/>
+                  {% else %}
+                    <input class="form-input" id="name" name="name" type="text" data-validate="require"/>
+                  {% endif %}
                 </div>
+                <div class="form-group">
+                  <label class="form-label" for="username">Никнейм
+                  </label>
+                  {% if user.username %}
+                    <input class="form-input" id="name" name="username" type="text" value="{{user.username}}" data-validate="require"/>
+                  {% else %}
+                    <input class="form-input" id="name" name="username" type="text" data-validate="require"/>
+                  {% endif %}
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="phone">Телефон</label>
+                  <input class="form-input" id="phone" name="phone" type="text" value="{{ user.phone_number }}" placeholder="номер телефона" autocomplete="off"/>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="mail">E-mail</label>
+                  <input class="form-input" id="mail" name="mail" type="text" value="{{ user.email }}" data-validate="require" autocomplete="off"/>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="password">Пароль</label>
+                  <input class="form-input" id="password" name="password" type="password" placeholder="Тут можно изменить пароль" autocomplete="off"/>
+                </div>
+                <div class="form-group">
+                  <label class="form-label" for="passwordReply">Подтверждение пароля</label>
+                  <input class="form-input" id="passwordReply" name="passwordReply" type="password" placeholder="Введите пароль повторно" autocomplete="off"/>
+                </div>
+                <div class="form-group">
+                  <div class="profile-btn">
+                    <button class="btn btn_success" type="submit">Сохранить</button>
+                  </div>
+                  <div class="profile-success">
+                    {% if messages %}
+                      <ul class="messages">
+                        {% for message in messages %}
+                          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                      </ul>
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
             </div>
+          </form>
         </div>
-    </div>
+      </div>
+  </div>
+
+
 
 {% endblock %}
