--- a/web_service/templates/users/login.j2
+++ b/web_service/templates/users/login.j2
@@ -3,7 +3,7 @@
 {% block content %}
 
             <div class="wrapper">
-                <div class="header">
+                <div class="login-title">
                     <h3 class="sign-in">Вход</h3>
                 </div>
                 {% if messages %}
@@ -14,26 +14,27 @@
                     </ul>
                 {% endif %}
                 <div class="clear"></div>
-                <form action="{{ url('users:login_user') }}" method="post">
+                <form action="{{ url('users:login_user') }}" method="post" autocomplete="off">
                     {% csrf_token %}
                     <div>
-                        <input class="user-input" type="text" name="email" id="name" placeholder="E-mail" />
+                        <input class="form-input" type="text" name="email" id="name" placeholder="E-mail" autocomplete="off"/>
                     </div>
                     <div>
-                        <input type="password" name="password" id="name" placeholder="*********" />
+                        <input class="form-input" type="password" name="password" id="name" placeholder="*********" autocomplete="new-password"/>
                     </div>
                     <div>
-                        <input type="submit" value="Войти" />
+                        <input class="btn btn_success" type="submit" value="Войти" />
                     </div>
-                    <a class="forgot-label" href="{{ url('users:password_reset') }}">Забыли пароль?</a>
-                    <a class="registr" href="{{ url('users:register_user') }}">
-                        Регистрация
-                    </a>
+
                 </form>
+                <div class="offset">
+                  <a class="a-active forgot-label" href="{{ url('users:password_reset') }}">Забыли пароль?</a>
+                  <a class="a-active registr" href="{{ url('users:register_user') }}">Регистрация</a>
+                </div>
             </div>
 
-        </div>
 
-    </main>
+
+
 
 {% endblock %}
