added i18n from jinja2 step1

--- a/web_service/templates/includes/header/header.j2
+++ b/web_service/templates/includes/header/header.j2
@@ -67,9 +67,8 @@
         </li>
       </ul>
     {% endif %}
-    {% include "includes/header/language.html" %}
+{#    {% include "includes/header/language.j2" %}#}
 
   </div>
 </header>
-
 
