--- a/web_service/templates/users/email/password_reset_mail.html
+++ b/web_service/templates/users/email/password_reset_mail.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
-    
+
     Вы получили это электронное письмо, потому что для пользователя {{ user.get_username }}
-    запросили сброс пароля для своей учётной записи пользователя на MEGANO.
+    был запрошен сброс пароля учётной записи пользователя.
 
 	Перейдите на следующую страницу и установите новый пароль:
 	{% block reset_link %}
@@ -12,6 +12,6 @@
 
     Если Вы не запрашивали восстановление пароля, проигнорируйте сообщений!
 
-	The MEGANO team
+	The team
 
 {% endautoescape %}
