--- a/web_service/templates/base.j2
+++ b/web_service/templates/base.j2
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Описание страницы">
+    <meta name="description" content="Description page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <title>{% block title %}КБ Маршал{% endblock title %}</title>
+    <title>{% block title %}{{ _('KB') }} {{ _('Marshal') }}{% endblock title %}</title>
     <link href="{{ static('img/favicon.avif') }}" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="{{ static('css/normalize.css') }}">
     <link rel="stylesheet" href="{{ static('css/style.css') }}">
@@ -23,7 +23,14 @@
           <section class="base">
               <div class="container">
                   {% block content %}
-                  {% endblock content %}
+                    {{ LANGUAGE_CODE }}
+                    {% for language in LANGUAGES %}
+                      {% if language[1] == LANGUAGE_CODE %}{{ language[1] }}{% endif %}
+                    {% endfor %}
+                    <h2>{{ _('Эта строка для проверки работы переводчика') }}</h2>
+                    <h3>{{ _('Вторая строка для проверки работы переводчика') }}</h3>
+                    {{ company_phones }}
+                  {% endblock %}
               </div>
           </section>
       </main>
