--- a/web_service/templates/includes/header/header.j2
+++ b/web_service/templates/includes/header/header.j2
@@ -27,23 +27,27 @@
           </svg>
         </a>
       </li>
+
+      {# TODO исправить эту кнопку положитьна место ссылки #}
+      <li>{% include "includes/header/language_button.j2" %}</li>
     </ul>
+
+
     <div class="entrance flex">
       <div class="wrap">
         <p class="text">
-          <a href="#" class="header__link header__link-lang">Ru</a>
-
+            <a href="{{ request.get_full_path() }}" class="header__link header__link-lang">{{ LANGUAGE_CODE.upper() }}</a>
         </p>
       </div>
       {% if request.user.is_authenticated %}
         <a href="{{ url('account:account_user', request.user.pk) }}" class="header__link-svg">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"/></svg>
         </a>
-        <a href="{{ url('users:logout_user') }}" class="header__link header__link-reg">Выйти</a>
+        <a href="{{ url('users:logout_user') }}" class="header__link header__link-reg">{{ _('Logout') }}</a>
       {% else %}
         <a href="{{ url('users:login_user') }}" class="header__link header__link-reg">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"/></svg>
-          Вход / Регистрация
+          {{ _('Login') }} / {{ _('Registration') }}
         </a>
       {% endif %}
       </div>
@@ -51,24 +55,22 @@
   </div>
   <div class="header__container-bottom flex">
     <h1 class="flex">
-      <span>КБ</span>
-      <span>Маршал</span>
+      <span>{{ _('KB') }}</span>
+      <span>{{ _('Marshal') }}</span>
     </h1>
     {%  if  request.user.groups.filter(name__in=['users', 'admins']).exists() or request.user.is_superuser %}
       <ul class="header-bottom__list list-reset flex">
         <li class="header-bottom__item">
-          <a href="#" class="header-bottom__link">{% trans %}Должники{% endtrans %}</a>
+          <a href="#" class="header-bottom__link">{{ _('Debtors') }}</a>
         </li>
         <li class="header-bottom__item">
-          <a href="#" class="header-bottom__link">{{ _('Сервис ФНС') }}</a>
+          <a href="#" class="header-bottom__link">{{ _('Service') }} {{ _('FNS') }}</a>
         </li>
         <li class="header-bottom__item">
-          <a href="#" class="header-bottom__link">{% trans %}Сервис ФССП{% endtrans %}</a>
+          <a href="#" class="header-bottom__link">{{ _('Service') }} {{ _('FSSP') }}</a>
         </li>
       </ul>
     {% endif %}
-{#    {% include "includes/header/language.j2" %}#}
-
   </div>
 </header>
 
