--- a/web_service/templates/includes/footer/footer.j2
+++ b/web_service/templates/includes/footer/footer.j2
@@ -6,8 +6,8 @@
         <a href="phone:{{ phone[0] }}" class="footer__link">{{ phone[0] }}: {{ phone[1] }}</a>
       {% endfor %}
        <a href="mailto:{{ company_email[1] }}" class="footer__link">{{ company_email[0] }}: {{ company_email[1] }}</a>
-       <a href="#" class="footer__link">{{ company_address[0].title() }}: {{ company_address[1] }}</a>
-       <a href="#" class="footer__link">{{ company_working_hours[0].title() }}: {{ company_working_hours[1] }}</a>
+       <a href="#" class="footer__link">{{ company_address[0] }}: {{ company_address[1] }}</a>
+       <a href="#" class="footer__link">{{ company_working_hours[0] }}: {{ company_working_hours[1] }}</a>
     </div>
   </div>
 </footer>
