--- a/web_service/templates/users/password.j2
+++ b/web_service/templates/users/password.j2
@@ -1,29 +1,22 @@
 {% extends "base.j2" %}
 
 {% block content %}
-
-
-            <div class="wrapper">
-                <div class="password-title">
-                    <h3 class="sign-in">Восстановление пароля (2/2)</h3>
-                    <h5 class="password-subtitle">Придумайте новый пароль для учетной записи</h5>
-                </div>
-
-                <form action="#" method="post">
-                    {% csrf_token %}
-
-                    <div>
-                        {{ form.new_password1 }}
-                    </div>
-                    <div>
-                        {{ form.new_password2 }}
-                    </div>
-                    <div>
-                        <input class="btn btn_success" type="submit" value="Сохранить пароль" />
-                    </div>
-                </form>
-            </div>
-
+    <div class="wrapper">
+        <div class="password-title">
+            <h3 class="sign-in">{{ _('Password recovery (2/2)') }}</h3>
+            <h5 class="password-subtitle">{{ _('Create new account password') }}</h5>
         </div>
-
+        <form action="#" method="post">
+            {% csrf_token %}
+            <div>
+                {{ form.new_password1 }}
+            </div>
+            <div>
+                {{ form.new_password2 }}
+            </div>
+            <div>
+                <input class="btn btn_success" type="submit" value="{{ _('Save password') }}" />
+            </div>
+        </form>
+    </div>
 {% endblock %}
