--- a/web_service/templates/users/register.j2
+++ b/web_service/templates/users/register.j2
@@ -1,40 +1,34 @@
 {% extends "base.j2" %}
 
 {% block content %}
-
-            <div class="wrapper">
-                <div class="register-title">
-                    <h3 class="sign-in">Регистрация</h3>
-                </div>
-                {% if messages %}
-                    <ul class="messages">
-                        {% for message in messages %}
-                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-                <div class="clear"></div>
-                <form action="{{ url('users:register_user') }}" method="post">
-                    {% csrf_token %}
-                    <div>
-                        <input class="form-input" type="text" name="username" id="name" placeholder="Никнейм" />
-                    </div>
-                    <div>
-                        <input class="form-input" type="email" name="login" id="name" placeholder="E-mail" />
-                    </div>
-                    <div>
-
-                        <input class="form-input" type="password" name="pass" id="name" placeholder="Пароль" autocomplete="new-password"/>
-                    </div>
-                    <input class="btn btn_success" type="submit" value="Зарегистрироваться" />
-                    <div class="offset">
-                      <a class="a-active registr" href="{{ url('users:login_user') }}">
-                        Вход
-                      </a>
-                    </div>
-                    <div class="clear"></div>
-                </form>
+    <div class="wrapper">
+        <div class="register-title">
+            <h3 class="sign-in">{{ _('Registration') }}</h3>
+        </div>
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        <div class="clear"></div>
+        <form action="{{ url('users:register_user') }}" method="post">
+            {% csrf_token %}
+            <div>
+                <input class="form-input" type="text" name="username" id="name" placeholder="{{ _('Nickname') }}" />
             </div>
-
-
+            <div>
+                <input class="form-input" type="email" name="login" id="name" placeholder="E-mail" />
+            </div>
+            <div>
+                <input class="form-input" type="password" name="pass" id="name" placeholder="{{ _('Password') }}" autocomplete="new-password"/>
+            </div>
+            <input class="btn btn_success" type="submit" value="{{ _('Register') }}" />
+            <div class="offset">
+              <a class="a-active registr" href="{{ url('users:login_user') }}">{{ _('Login') }}</a>
+            </div>
+            <div class="clear"></div>
+        </form>
+    </div>
 {% endblock %}
